welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: value update is not a member of java.awt.Color
  else if (getCouleurSol() = Color.green) {
           ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (getCouleurSol() = Color.green) {
       ^