welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()) {return false}
  else if (getCouleurSol() != Color.green) {
      return false}
  else if (getCouleurSol() = Color.green) {
    return true}
}
           